@@ -1,6 +1,7 @@
 Changes for 2.1
 
 * New feature: Create class for profiling functions #10.
+* New feature: Add new example: limit the quantity of printed messages #4.
 
 
 Changes for 2.0.2:
